[package]
authors = ["Darius C", "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
edition = "2021"
homepage = "https://github.com/dariusc93/rust-igd"
keywords = ["igd", "upnp", "tokio"]
license = "MIT"
name = "igd-next"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-igd"
version = "0.12.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = {version = "0.24", default-features = false}
bytes = {version = "1", optional = true}
futures = {version = "0.3", optional = true}
http = {version = "0.2", optional = true}
log = "0.4"
rand = "0.8"
tokio = {version = "1", optional = true, features = ["net"]}
url = "2"
xmltree = "0.10"

[dependencies.hyper]
default-features = false
features = ["client", "http1", "http2", "runtime"]
optional = true
version = "0.14"

[dev-dependencies]
simplelog = "0.9"
tokio = {version = "1", features = ["full"]}

[features]
aio = ["futures", "tokio", "hyper", "bytes", "http"]
default = []

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio"
required-features = ["aio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
